@@ -161,6 +161,7 @@ v1.2.0  --> 1.2.x :
 		- Fix for backward compatibility when rescanning releases uploaded prior to the flacsupport
 		- Fix for bitrate gathering for flacfiles and vbr_version_string will now show the encoder used
 		- Fixed another matchpath bug if both dirs were equal and both had no trailing /
+		- Updated PreTime.tcl to check if the connection is still open, and some other stuff
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
